syntax = "proto3";

package auth;

option go_package = "piglet-auth/api/proto/gen;authv1";

service Auth {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
}

message RegisterUserRequest {
  string username = 1;
  string email = 2;
  string pass = 3;
  string con_pass = 4;
}

message RegisterUserResponse {
  int64 user_id = 1;
}

message LoginRequest {
  string username = 1;
  reserved 2;
  string pass = 3;
}

message LoginResponse {
  string token = 1;
}

message UpdateUserRequest {
  string username = 1;
  string email = 2;
  string old_pass = 3;
  string pass = 4;
  string con_pass = 5;
}

message UpdateUserResponse {
  bool success = 1;
}
